# zk-rosetta

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: catalog_entry.md
.github/workflows/: ci.yml  coverage.yml  drift.yml  pages.yml  security.yml
crates/zkr-catalog/: Cargo.toml
crates/zkr-catalog/src/: drift.rs  lib.rs  load.rs  model.rs  validate.rs
crates/zkr-catalog/tests/fixtures/drift/: bip-0340.mediawiki  eip-197.md  erc-7812.md  fip-0079.md  mip-0003.md  rip-7212.md  simd-0129.md  snip-12.md  zip-0224.rst
crates/zkr-cli/: Cargo.toml
crates/zkr-cli/src/: main.rs
crates/zkr-core/: Cargo.toml
crates/zkr-core/src/: label.rs  lib.rs  load.rs  primitive.rs
crates/zkr-harness/: Cargo.toml
crates/zkr-harness/src/: evm.rs  filecoin.rs  lib.rs  load.rs  model.rs  svm.rs  validate.rs
crates/zkr-harness/tests/: bls_parity.rs  evm_parity.rs  parity.rs  proven.rs  svm_parity.rs  vectors.rs
crates/zkr-site/: Cargo.toml
crates/zkr-site/assets/: filter.js  style.css
crates/zkr-site/src/: main.rs  render.rs
crates/zkr-site/templates/: base.html  entry.html  index.html  proposal.html  rosetta.html
data/aleo/: aleo-varuna.toml
data/aztec/: aztec-honk.toml
data/bitcoin/: bip-327.toml  bip-340.toml  bip-341.toml  bip-342.toml
data/ethereum/: eip-1108.toml  eip-152.toml  eip-1829.toml  eip-196.toml  eip-197.toml  eip-2537.toml  eip-4844.toml  eip-7951.toml  erc-1922.toml  erc-1923.toml  erc-5564.toml  erc-6538.toml  erc-7524.toml  erc-7812.toml
data/filecoin/: fip-0079.toml  fip-0092.toml
data/linea/: linea-plonk.toml
data/midnight/: midnight-halo2.toml
data/mina/: mip-0003.toml
data/namada/: namada-masp.toml
data/penumbra/: penumbra-groth16.toml
data/polygon/: polygon-zkevm.toml
data/rollup/: rip-7212.toml
data/scroll/: scroll-halo2.toml
data/solana/: simd-0048.toml  simd-0075.toml  simd-0129.toml  simd-0153.toml  simd-0284.toml  simd-0302.toml  simd-0388.toml
data/starknet/: snip-12.toml  snip-6.toml
data/taiko/: taiko-zkvm.toml
data/zcash/: zip-0216.toml  zip-0224.toml
data/zksync/: zksync-boojum.toml
programs/zkr-svm-program/: Cargo.toml  README.md
programs/zkr-svm-program/src/: lib.rs
scripts/: report-drift.js
vectors/: README.md
vectors/bls12-381-bls-signature/: PROVENANCE.md  generate.rs  generate.sh  vector.toml
vectors/bn254-groth16-multiplier/: PROVENANCE.md  generate.sh  to_vector.mjs  vector.toml
vectors/bn254-groth16-multiplier/circuit/: multiplier.circom
vectors/bn254-groth16-multiplier/evm/: export_verifier.go  generate.sh  verifier.runtime.hex
vectors/bn254-groth16-multiplier/snarkjs/: proof.json  verification_key.json
