[workspace]
resolver = "2"
members = [
    "crates/zkr-catalog",
    "crates/zkr-cli",
    "crates/zkr-site",
    "crates/zkr-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/zk-rosetta"
homepage = "https://github.com/maatlabs/zk-rosetta"

[workspace.dependencies]
zkr-catalog = { path = "crates/zkr-catalog", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
schemars = "1"
thiserror = "2"
url = "2.5"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
ureq = "3"
anyhow = "1"
minijinja = "2"
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }
