[workspace]
resolver = "2"
members = [
    "crates/zkr-core",
    "crates/zkr-catalog",
    "crates/zkr-cli",
    "crates/zkr-site",
    "crates/zkr-harness",
]
# Built for the SBF runtime with its own toolchain and dependency set, so it is
# kept out of the host workspace and compiled separately via `cargo build-sbf`.
exclude = ["programs/zkr-svm-program"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maatlabs/zk-rosetta"
homepage = "https://github.com/maatlabs/zk-rosetta"

[workspace.dependencies]
zkr-core = { path = "crates/zkr-core", version = "0.4.0" }
zkr-catalog = { path = "crates/zkr-catalog", version = "0.4.0" }
zkr-harness = { path = "crates/zkr-harness", version = "0.4.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
schemars = "1"
thiserror = "2"
url = "2.5"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
ureq = "3"
rayon = "1"
anyhow = "1"
minijinja = "2"
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }

# SVM parity adapter: drive the audited groth16-solana verifier inside litesvm.
# The split solana crates are pinned to the versions litesvm builds against so
# their transaction and instruction types unify; arkworks supplies the audited
# point negation the verifier's input encoding requires.
litesvm = "0.13"
solana-address = "=2.2.0"
solana-instruction = "=3.2.0"
solana-instruction-error = "=2.2.0"
solana-keypair = "3.1"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"
solana-transaction-error = "3.1.0"
ark-bn254 = "0.6"
ark-ff = "0.6"

# EVM parity adapter: run an audited Groth16 BN254 verifier (a committed,
# compiled fixture) in the revm in-process EVM, exercising the real EIP-196 and
# EIP-197 alt_bn128 precompiles. revm 33 also exposes the EIP-2537 BLS12-381
# precompiles under the Prague spec, used by the BLS signature parity adapter.
revm = "33"

# Filecoin parity adapter: drive the audited bls-signatures BLS12-381 verifier
# over the shared vector, selecting the blst/blstrs backend Filecoin runs in
# production; blstrs supplies the audited point parsing the adapter marshals into.
bls-signatures = { version = "0.15", default-features = false, features = [
    "blst",
] }
blstrs = "0.7"
