[package]
name = "zkr-catalog"
description = "Data model, loader, and validator for the zk-rosetta cross-ecosystem catalog."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zkr-core.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
schemars.workspace = true
thiserror.workspace = true
url.workspace = true
