[package]
name = "zkr-core"
description = "Shared infrastructure for zk-rosetta: the primitive taxonomy, the TOML loading layer, and the canonical display-label helper."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
schemars.workspace = true
thiserror.workspace = true
