[package]
name = "zkr-harness"
description = "Shared test-vector format and loader that drive audited zero-knowledge implementations across ecosystems."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zkr-core.workspace = true

serde.workspace = true
toml.workspace = true
thiserror.workspace = true
hex.workspace = true

litesvm = { workspace = true, optional = true }
solana-address = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-instruction-error = { workspace = true, optional = true }
solana-keypair = { workspace = true, optional = true }
solana-signer = { workspace = true, optional = true }
solana-transaction = { workspace = true, optional = true }
solana-transaction-error = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-ff = { workspace = true, optional = true }
revm = { workspace = true, optional = true }

[dev-dependencies]
zkr-catalog.workspace = true

[features]
# Each parity adapter and its heavy ecosystem dependencies are opt-in, so the
# catalog-facing build of this crate stays lean.
svm = [
    "dep:litesvm",
    "dep:solana-address",
    "dep:solana-instruction",
    "dep:solana-instruction-error",
    "dep:solana-keypair",
    "dep:solana-signer",
    "dep:solana-transaction",
    "dep:solana-transaction-error",
    "dep:ark-bn254",
    "dep:ark-ff",
]
evm = ["dep:revm"]
