[package]
name = "zkr-site"
description = "Static-site generator that renders the zk-rosetta catalog and Rosetta comparison view."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "zkr-site"
path = "src/main.rs"

[dependencies]
zkr-catalog.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
minijinja.workspace = true
pulldown-cmark.workspace = true
